<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{9fc6fce2-60ac-4627-847b-aa5b7f44070e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	arrAlarms : ARRAY[0..99] OF TYP_ALARMS;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>