<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_ALARM_INTERFACE" Id="{f1c636b4-d1f6-44d9-bad3-7e28559e1da4}">
    <Declaration><![CDATA[TYPE TYP_ALARM_INTERFACE :
STRUCT
	bActivate : BOOL;
	bConfirm : BOOL;
	sMessage : STRING;
	sSourceMessage : STRING;
	nEventID : UDINT;
	nSourceID : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>